tests/ui/explicit-tail-calls/constck.stderr
error[E0015]: cannot call non-const function `not_const` in constant functions
  --> $DIR/constck.rs:6:16
   |
LL | const fn f() {
   | ------------ calls in constant functions are limited to constant functions, tuple structs and tuple variants
LL |     if false {
LL |         become not_const();
   |                ^^^^^^^^^^^
   |
note: function `not_const` is not const
  --> $DIR/constck.rs:18:1
   |
LL | fn not_const() {}
   | ^^^^^^^^^^^^^^

error[E0015]: cannot call non-const function `not_const` in constant functions
  --> $DIR/constck.rs:13:26
   |
LL | const fn g((): ()) {
   | ------------------ calls in constant functions are limited to constant functions, tuple structs and tuple variants
LL |     if false {
LL |         become yes_const(not_const());
   |                          ^^^^^^^^^^^
   |
note: function `not_const` is not const
  --> $DIR/constck.rs:18:1
   |
LL | fn not_const() {}
   | ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
